<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        >
        <android.support.constraint.ConstraintLayout
            android:id="@+id/co_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            >
            <ImageView
                android:id="@+id/arrow"
                android:layout_width="40dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/white_left_arrow"
                android:padding="10dp"
                android:layout_marginStart="5dp"
                tools:ignore="RtlCompat"
                android:clickable="false"
                android:longClickable="false"
                />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/arrow"
                app:layout_constraintTop_toTopOf="@id/arrow"
                app:layout_constraintBottom_toBottomOf="@id/arrow"
                android:textSize="18sp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:clickable="false"
                android:longClickable="false"


                />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@id/tv_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/logo"
                app:layout_constraintHorizontal_bias=".4"
                />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        android:fillViewport="true"
        android:scrollbars="none"
        >


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                />


            <TextView
                android:id="@+id/tv1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="RtlCompat"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:layout_constraintEnd_toStartOf="@id/tv_name"
                android:layout_marginTop="30dp"
                tools:layout_editor_absoluteY="76dp"
                app:layout_constraintHorizontal_weight=".4"
                />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:layout_constraintHorizontal_weight=".6"
                app:layout_constraintStart_toEndOf="@id/tv1"
                android:layout_marginTop="30dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/production_date"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="RtlCompat"
                app:layout_constraintTop_toBottomOf="@id/tv1"
                app:layout_constraintEnd_toStartOf="@id/tv_date"
                android:layout_marginTop="10dp"
                tools:layout_editor_absoluteY="76dp"
                app:layout_constraintHorizontal_weight=".4"
                />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="17sp"
                app:layout_constraintTop_toTopOf="@id/tv2"
                app:layout_constraintStart_toEndOf="@id/tv2"
                tools:ignore="RtlCompat"
                app:layout_constraintHorizontal_weight=".6"
                tools:layout_editor_absoluteY="71dp"
                app:layout_constraintEnd_toEndOf="parent"

                />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/quality"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="RtlCompat"
                app:layout_constraintTop_toBottomOf="@id/tv_date"
                app:layout_constraintEnd_toStartOf="@id/tv_quality"
                android:layout_marginTop="10dp"
                tools:layout_editor_absoluteY="76dp"
                app:layout_constraintHorizontal_weight=".4"
                />

            <TextView
                android:id="@+id/tv_quality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="17sp"
                app:layout_constraintTop_toTopOf="@id/tv3"
                app:layout_constraintStart_toEndOf="@id/tv3"
                tools:ignore="RtlCompat"
                app:layout_constraintHorizontal_weight=".6"
                tools:layout_editor_absoluteY="71dp"
                app:layout_constraintEnd_toEndOf="parent"

                />


            <TextView
                android:id="@+id/tv4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/price"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="RtlCompat"
                app:layout_constraintTop_toBottomOf="@id/tv_quality"
                app:layout_constraintEnd_toStartOf="@id/tv_price"
                android:layout_marginTop="10dp"
                tools:layout_editor_absoluteY="76dp"
                app:layout_constraintHorizontal_weight=".4"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"

                />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:textSize="17sp"
                app:layout_constraintTop_toTopOf="@id/tv4"
                app:layout_constraintStart_toEndOf="@id/tv4"
                tools:ignore="RtlCompat"
                app:layout_constraintHorizontal_weight=".6"
                tools:layout_editor_absoluteY="71dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0"

                />




        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>